Fix layout issues on mobile.

--- a/src/app/components/app/app.style.scss
+++ b/src/app/components/app/app.style.scss
@@ -1,6 +1,7 @@
+@import '../../styles/mixins/media-queries';
+
 .app {
     &__base {
-        position: relative;
         display: flex;
         flex-direction: column;
         justify-content: space-between;
@@ -12,42 +13,45 @@
 
     &__main {
         position: relative;
-
-        // padding: 16px;
-        width: 100%;
-
-        // height: 0;
-        overflow: hidden;
         display: flex;
         align-items: center;
         flex-direction: column;
         justify-content: center;
+        flex: 1 0 auto;
+
+        // padding: 16px;
+        // height: 0;
+        // overflow: hidden;
     }
 
-    &__link {
-        text-align: center;
-        font-size: 13px;
-        line-height: 13px;
-        border-top: 1px solid #f0f0f0;
-        padding: 16px;
-        text-decoration: none;
-        color: black;
-        text-transform: uppercase;
-        display: flex;
-        align-items: center;
-        justify-content: center;
+    &__coverLeft,
+    &__coverRight {
+        position: fixed;
+        top: 0;
+        bottom: 0;
+        z-index: 20;
+        width: calc((100vw - 800px) / 2);
+        transform: translateZ(0);
+        display: none;
+        pointer-events: none;
 
-        &Icon {
-            margin-right: 8px;
+        @include above(xl) {
+            display: block;
         }
+    }
 
-        &Underline {
-            box-shadow: 0 1px 0 0 #00f;
-        }
+    &__coverLeft {
+        left: 0;
+        background: linear-gradient(to right, #fff 20%, rgba(255, 255, 255, 0));
+    }
 
-        &:hover > &Underline {
-            box-shadow: 0 2px 0 0 #00f;
-        }
+    &__coverRight {
+        right: 0;
+        background: linear-gradient(to left, #fff 20%, rgba(255, 255, 255, 0));
+    }
+
+    &__intro {
+        display: none;
     }
 
     &__error {
