--- a/src/app/styles/reset.scss
+++ b/src/app/styles/reset.scss
@@ -1,16 +1,21 @@
+html {
+    height: 100%;
+}
+
 body {
     position: relative;
+    width: 100%;
+    height: 100%;
     margin: 0;
     background: white;
-    font-size: 20px;
-    line-height: 30px;
-    display: flex;
-    overflow: hidden;
     font-family: 'DM Mono', monospace;
 
+    // display: flex;
+    // overflow: hidden;
+
     // Uncomment if vertical scaling is enabled:
-    height: 100vh;
-    min-height: 100vh;
+    // height: 100vh;
+    // min-height: 100vh;
 }
 
 h1,
